<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="4dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:layout_marginTop="4dp"
    >
    <!-- Province Filter -->
    <TextView
        android:id="@+id/province_TxVW_SchoolFilter_Desc"
        android:layout_width="0dp"
        android:layout_height="27dp"
        android:layout_alignParentTop="true"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="8dp"
        android:text="@string/city_desc"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent" />
    <Spinner
        android:id="@+id/province_Spr_SchoolFilter"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </Spinner>

    <!-- Field Filter -->
    <TextView
        android:id="@+id/field_TxVW_SchoolFilter_Desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/schoolName_desc"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/province_TxVW_SchoolFilter_Desc" />
    <Spinner
        android:id="@+id/field_Spr_SchoolFilter"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/province_Spr_SchoolFilter">

    </Spinner>

    <!-- gender Filter -->
    <TextView
        android:id="@+id/gender_TxVW_SchoolFilter_Desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/gender_desc"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/field_TxVW_SchoolFilter_Desc" />
    <Spinner
        android:id="@+id/gender_Spr_SchoolFilter"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/field_Spr_SchoolFilter">

    </Spinner>

</androidx.constraintlayout.widget.ConstraintLayout>
